# EditorSQL

./: Cargo.toml  Dioxus.toml  README.md
assets/: styles.css
src/: api.rs  app.rs  app.rs_fix_end  main.rs  state.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
